--- a/entities/binary_sensors/motion.yaml
+++ b/entities/binary_sensors/motion.yaml
@@ -9,7 +9,8 @@ sensors:
       {{ is_state("binary_sensor.activity_in_living_room", "on")
         or is_state("binary_sensor.activity_in_hallway", "on")
         or is_state("binary_sensor.activity_in_study", "on")
-        or is_state("binary_sensor.activity_in_landing", "on") }}
+        or is_state("binary_sensor.activity_in_landing", "on")
+        or is_state("binary_sensor.activity_in_attic", "on") }}
 
   motion_detected_in_last_hour:
     friendly_name: Any motion detected in last hour
@@ -47,22 +48,48 @@ sensors:
       {{ is_state("binary_sensor.landing_motion_sensor_occupancy", "on") }}
     delay_off: "00:02:00"
 
+  activity_in_attic:
+    friendly_name: Activity in the attic
+    value_template: >
+      {{ is_state("binary_sensor.attic_motion_sensor_occupancy", "on") }}
+    delay_off: "00:02:00"
+
   any_light_on:
     friendly_name: Any light is on
     value_template: >
       {% set living_room_lights_on = is_state("light.living_room", "on") %}
       {% set kitchen_lights_on = is_state("light.kitchen", "on") %}
       {% set middle_room_lights_on = is_state("light.middle_room", "on") %}
-      {% set dining_room_lights_on = is_state("light.dining_room", "on") %}
+      {% set dining_lights_on = is_state("light.dining_room", "on") %}
       {% set hallway_lights_on = is_state("light.hallway", "on") %}
-      {{ living_room_lights_on or kitchen_lights_on or middle_room_lights_on or dining_room_lights_on or hallway_lights_on }}
+      {% set study_lights_on = is_state("light.study_light", "on") %}
+      {% set attic_lights_on = is_state("light.attic_light", "on") %}
+      {{ living_room_lights_on or kitchen_lights_on or middle_room_lights_on or dining_room_lights_on or hallway_lights_on or study_lights_on or attic_lights_on }}
+
+  any_fan_on:
+    friendly_name: Any fan is on
+    value_template: >
+      {% set fan_bedroom_on = is_state("fan.bedroom_fan", "on") %}
+      {% set fan_living_room_on = is_state("fan.living_room_fan", "on") %}
+      {% set fan_study_on = is_state("fan.study_fan", "on") %}
+      {{ fan_bedroom_on or fan_living_room_on or fan_study_on }}
+
+  any_media_player_on:
+    friendly_name: Any media player is on
+    value_template: >
+      {% set media_player_downstairs_on = is_state("media_player.downstairs", "on") %}
+      {% set media_player_zeppelin_on = is_state("media_player.zeppelin_living_room", "on") %}
+      {% set media_player_denon_on = is_state("media_player.denon_avr_x1700h", "on") %}
+      {% set media_player_lg_on = is_state("media_player.lg_webos_smart_tv", "on") %}
+      {{ fan_bedroom_on or fan_living_room_on or fan_study_on }}
 
   anything_on:
     friendly_name: Anything is on
     value_template: >
       {% set light_on = is_state("binary_sensor.any_light_on", "on") %}
-      {% set tv_on = is_state("media_player.living_room_tv", "on") %}
-      {{ light_on or tv_on }}
+      {% set fan_on = is_state("binary_sensor.any_fan_on", "on") %}
+      {% set media_player_on = is_state("binary_sensor.any_media_player_on", "on") %}
+      {{ light_on or fan_on or media_player_on }}
 
   vacuum_day_tomorrow:
     friendly_name: Vacuum day tomorrow
