remove adaptive lightning configuration.yml

--- a/entities/sensors/home/history_stats.yaml
+++ b/entities/sensors/home/history_stats.yaml
@@ -2,7 +2,7 @@
 # History stats
 platform: history_stats
 name: Times TV has been on last 7 days
-entity_id: media_player.living_room_tv
+entity_id: media_player.downstairs
 state: "on"
 type: count
 duration:
