--- a/entities/sensors/home/adaptive_lightning.yaml
+++ b/entities/sensors/home/adaptive_lightning.yaml
@@ -1,21 +1,21 @@
 ---
 # Adaptive lightning
-platform: template
-sensors:
-
-  adaptive_lighting_color_temp_mired:
-    unit_of_measurement: "mired"
-    value_template: >
-      {{ state_attr("switch.adaptive_lighting_downstairs", "color_temp_mired") }}
-  adaptive_lighting_color_temp_kelvin:
-    unit_of_measurement: "K"
-    value_template: >
-      {{ state_attr("switch.adaptive_lighting_downstairs", "color_temp_kelvin") }}
-  adaptive_lighting_brightness:
-    unit_of_measurement: "%"
-    value_template: >
-      {{ state_attr("switch.adaptive_lighting_downstairs", "brightness_pct") }}
-  adaptive_lighting_sun_position:
-    unit_of_measurement: "%"
-    value_template: >
-      {{ 100 * state_attr("switch.adaptive_lighting_downstairs", "sun_position") }}
+#platform: template
+#sensors:
+#
+#  adaptive_lighting_color_temp_mired:
+#    unit_of_measurement: "mired"
+#    value_template: >
+#      {{ state_attr("switch.adaptive_lighting_downstairs", "color_temp_mired") }}
+#  adaptive_lighting_color_temp_kelvin:
+#    unit_of_measurement: "K"
+#    value_template: >
+#      {{ state_attr("switch.adaptive_lighting_downstairs", "color_temp_kelvin") }}
+#  adaptive_lighting_brightness:
+#    unit_of_measurement: "%"
+#    value_template: >
+#      {{ state_attr("switch.adaptive_lighting_downstairs", "brightness_pct") }}
+#  adaptive_lighting_sun_position:
+#    unit_of_measurement: "%"
+#    value_template: >
+#      {{ 100 * state_attr("switch.adaptive_lighting_downstairs", "sun_position") }}
