--- a/entities/sensors/home/active_devices.yaml
+++ b/entities/sensors/home/active_devices.yaml
@@ -8,7 +8,7 @@ sensors:
       {% set lights = [states.light.kitchen, states.light.living_room, states.light.middle_room, states.light.dining_room, states.light.study_light, states.light.bedroom_light, states.light.landing_light, states.light.attic_light] %}
       {% set lights_on = lights | selectattr('state','eq','on') | list %}
       {% set lights_name = lights | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
-      {% set switches = [states.fan.bedroom_fan, states.fan.study_fan, states.fan.living_room, states.media_player.zeppelin_living_room, states.media_player.downstairs] %}
+      {% set switches = [states.fan.bedroom_fan, states.fan.study_fan, states.fan.living_room_fan, states.media_player.zeppelin_living_room, states.media_player.downstairs] %}
       {% set switches_on = switches | selectattr('state','eq','on') | list %}
       {% set switches_name = switches | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
       {% if (lights_on | length == 0) and (switches_on | length == 1) %}
