change weather.lbl_16 to weather.irosma27

--- a/views/columns/summary/summary_left.yaml
+++ b/views/columns/summary/summary_left.yaml
@@ -26,7 +26,7 @@
       hours_to_show: 168
 
 - type: weather-forecast
-  entity: weather.lbl_16
+  entity: weather.irosma27
   show_forecast: true
 
 - type: custom:neerslag-card
