--- a/.stubs/ci_secrets.yaml
+++ b/.stubs/ci_secrets.yaml
@@ -108,3 +108,7 @@ trusted_proxy: 1.1.1.1
 qbit_url: http://192.168.1.123:456/
 qbit_user: gebruikersnaam
 qbit_pass: wachtwoord!
+
+# gotify
+gotify_url: https://url.nl/
+gotify_token: langtokenhier123
