change vacuum to correct sensor

--- a/entities/sensors/home/vacuum.yaml
+++ b/entities/sensors/home/vacuum.yaml
@@ -68,3 +68,9 @@ sensors:
       {% elif last_cleaned | timestamp_custom('%M') | int >= 2 %} {{ last_cleaned | timestamp_custom('%M') | int }} minutes ago
       {% else %} Less then 1 minute ago
       {% endif %}
+
+  vacuum_day_tomorrow:
+    friendly_name: Vacuum day tomorrow
+    unique_id: vacuum_day_tomorrow
+    value_template: >
+      {{ as_timestamp(now()) | timestamp_custom("%a") in ("Mon", "Fri") }}
