--- a/entities/notifiers/wesley_ntfy.yaml
+++ b/entities/notifiers/wesley_ntfy.yaml
@@ -1,5 +1,5 @@
 ---
-# Wesley Telegram
+# Wesley Ntfy
 name: wesley_ntfy
 platform: apprise
 url: ntfys://tk_bfdqbf3zjk8xi4wu309ap9vs8wxl5@ntfy.weaselweb.nl/hass
