--- a/entities/binary_sensors/motion.yaml
+++ b/entities/binary_sensors/motion.yaml
@@ -7,7 +7,12 @@ sensors:
     friendly_name: Motion detected in last hour
     unique_id: motion_detected_in_last_hour
     value_template: >
-      {{ is_state("binary_sensor.motion_detected", "on") }}
+      {{ is_state("binary_sensor.living_room_motion_sensor_occupancy", "on") or
+      is_state("binary_sensor.kitchen_motion_sensor_occupancy", "on") or
+      is_state("binary_sensor.hallway_motion_sensor_occupancy", "on") or
+      is_state("binary_sensor.study_motion_sensor_occupancy", "on") or
+      is_state("binary_sensor.landing_motion_sensor_occupancy", "on") or
+      is_state("binary_sensor.attic_motion_sensor_occupancy", "on") }}
     delay_off: "01:00:00"
 
   someone_in_the_house_in_last_hour:
