--- a/entities/binary_sensors/motion.yaml
+++ b/entities/binary_sensors/motion.yaml
@@ -16,16 +16,58 @@ sensors:
       {{ is_state("binary_sensor.motion_detected_in_last_hour", "on")
         or is_state("group.persons", "home") }}
 
-  activity_in_room:
-    friendly_name: "Activity in {{ room }}"
-    unique_id: "activity_in_{{ room | replace(' ', '_') }}"
+  activity_in_living_room:
+    friendly_name: Activity in the living room
+    unique_id: activity_in_living_room
     value_template: >
-      {{ is_state("binary_sensor." ~ room | replace(' ', '_') ~ "_motion_sensor_occupancy", "on") }}
+      {{ is_state("binary_sensor.living_room_motion_sensor_occupancy", "on") }}
     delay_off: "00:02:00"
-    for_each:
-      - room: living room
-      - room: kitchen
-      - room: hallway
-      - room: study
-      - room: landing
-      - room: attic
+
+  activity_in_kitchen:
+    friendly_name: Activity in the kitchen
+    unique_id: activity_in_kitchen
+    value_template: >
+      {{ is_state("binary_sensor.kitchen_motion_sensor_occupancy", "on") }}
+    delay_off: "00:02:00"
+
+  activity_in_hallway:
+    friendly_name: Activity in the hallway
+    unique_id: activity_in_hallway
+    value_template: >
+      {{ is_state("binary_sensor.hallway_motion_sensor_occupancy", "on") }}
+    delay_off: "00:02:00"
+
+  activity_in_study:
+    friendly_name: Activity in the study
+    unique_id: activity_in_study
+    value_template: >
+      {{ is_state("binary_sensor.study_motion_sensor_occupancy", "on") }}
+    delay_off: "00:02:00"
+
+  activity_in_landing:
+    friendly_name: Activity in the landing
+    unique_id: activity_in_landing
+    value_template: >
+      {{ is_state("binary_sensor.landing_motion_sensor_occupancy", "on") }}
+    delay_off: "00:02:00"
+
+  activity_in_attic:
+    friendly_name: Activity in the attic
+    unique_id: activity_in_attic
+    value_template: >
+      {{ is_state("binary_sensor.attic_motion_sensor_occupancy", "on") }}
+    delay_off: "00:02:00"
+
+#  activity_in_room:
+#    friendly_name: "Activity in {{ room }}"
+#    unique_id: "activity_in_{{ room | replace(' ', '_') }}"
+#    value_template: >
+#      {{ is_state("binary_sensor." ~ room | replace(' ', '_') ~ "_motion_sensor_occupancy", "on") }}
+#    delay_off: "00:02:00"
+#    for_each:
+#      - room: living room
+#      - room: kitchen
+#      - room: hallway
+#      - room: study
+#      - room: landing
+#      - room: attic
