--- a/entities/sensors/home/active_devices.yaml
+++ b/entities/sensors/home/active_devices.yaml
@@ -1,32 +1,52 @@
----
 # Template
 platform: template
 sensors:
 
   active_devices:
     value_template: >
-      {% set lights = [states.light.kitchen, states.light.living_room, states.light.middle_room, states.light.dining_room, states.light.study_light, states.light.bedroom_light, states.light.landing_light, states.light.attic_light] %}
+      {% set lights = [
+        states.light.kitchen,
+        states.light.living_room,
+        states.light.middle_room,
+        states.light.dining_room,
+        states.light.study_light,
+        states.light.bedroom_light,
+        states.light.landing_light,
+        states.light.attic_light
+      ] %}
+
       {% set lights_on = lights | selectattr('state','eq','on') | list %}
+      {% set lights_count = lights_on | length %}
       {% set lights_name = lights | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
-      {% set switches = [states.fan.bedroom_fan, states.fan.study_fan, states.fan.living_room_fan, states.media_player.zeppelin_living_room, states.media_player.downstairs] %}
+
+      {% set switches = [
+        states.fan.bedroom_fan,
+        states.fan.study_fan,
+        states.fan.living_room_fan,
+        states.media_player.zeppelin_living_room,
+        states.media_player.downstairs
+      ] %}
+
       {% set switches_on = switches | selectattr('state','eq','on') | list %}
+      {% set switches_count = switches_on | length %}
       {% set switches_name = switches | selectattr('state','eq','on') | map(attribute='name') | join(', ') %}
-      {% if (lights_on | length == 0) and (switches_on | length == 1) %}
+
+      {% if (lights_count == 0) and (switches_count == 1) %}
       {{ switches_name }} is on
-      {% elif (lights_on | length == 0) and (switches_on | length > 1) %}
+      {% elif (lights_count == 0) and (switches_count > 1) %}
       {{ switches_name | regex_replace(',([^,]*)$',' and\\1') }} are on
-      {% elif (lights_on | length == 1) and (switches_on | length == 1) %}
+      {% elif (lights_count == 1) and (switches_count == 1) %}
       {{ lights_name }} and {{switches_name }} are on
-      {% elif (lights_on | length == 1) and (switches_on | length > 1) %}
+      {% elif (lights_count == 1) and (switches_count > 1) %}
       {{ lights_name }}, {{ switches_name | regex_replace(',([^,]*)$',' and\\1') }} are on
-      {% elif (lights_on | length > 1) and (switches_on | length == 1) %}
-      {{ lights_on | length }} Lights and {{ switches_name }} are on
-      {% elif (lights_on | length > 1) and (switches_on | length > 1) %}
-      {{ lights_on | length }} Lights, {{ switches_name | regex_replace(',([^,]*)$',' and\\1') }} are on
-      {% elif (lights_on | length == 1) and (switches_on | length == 0) %}
+      {% elif (lights_count > 1) and (switches_count == 1) %}
+      {{ lights_count }} Lights and {{ switches_name }} are on
+      {% elif (lights_count > 1) and (switches_count > 1) %}
+      {{ lights_count }} Lights, {{ switches_name | regex_replace(',([^,]*)$',' and\\1') }} are on
+      {% elif (lights_count == 1) and (switches_count == 0) %}
       {{ lights_name }} is on
-      {% elif (lights_on | length > 1) and (switches_on | length == 0) %}
-      {{ lights_on | length}} Lights are on
+      {% elif (lights_count > 1) and (switches_count == 0) %}
+      {{ lights_count}} Lights are on
       {% else %}
       <font color='#6a7377'>Everything is off</font>
       {% endif %}
